# upload_gs-server

./: .gitignore  .gitmodules  README.md  configure_run  meson.build  meson_options.txt
src/: main.c
src/include/param/: upload_sat_paramids.h  vmem_upload_param.h
src/include/protobuf/: dtpmetadata.pb-c.h  metadata.pb-c.h  uploadmetadata.pb-c.h
src/include/vmem/: vmem_dtp_server.h  vmem_ring_buffer.h  vmem_storage.h  vmem_upload.h  vmem_upload_local.h
src/protobuf/: dtpmetadata.pb-c.c  metadata.pb-c.c  uploadmetadata.pb-c.c
src/vmem/: vmem_dtp_server.c  vmem_dtp_server_old.c  vmem_ring_buffer.c  vmem_upload_local.c
